# Design-and-Implementation-of-Database-Watermarking-Algorithms-Resistant-to-Brute-Force-Attacks.

./: .editorconfig  .gitignore  README.md
ai/: brainstorming.md  docs-prompt.md  docs.md  plan.md  refactor.md  tasks.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  download_progress.py  events.py  job_manager.py  job_read_model.py  main.py  models.py  output_paths.py  paths.py  schemas.py  system_open.py  ytdlp_formats.py  ytdlp_service.py
backend/tests/: fakes.py  test_api.py  test_download_progress.py  test_paths.py  test_system_open.py  test_ytdlp_service.py
docs/: 4-plus-1-view.md  api.md  architecture.md  development.md  documentation-workflow.md  implementation.md  index.md  maintenance.md  requirements.md  technical.md  testing.md  user-manual.md
docs/diagrams/: four-plus-one-development-view.puml  four-plus-one-logical-view.puml  four-plus-one-physical-view.puml  four-plus-one-process-view.puml  four-plus-one-scenario-view.puml  playlist-sequence.puml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  formatting.ts  quality.ts  styles.css  types.ts
frontend/src/components/: JobQueue.tsx
frontend/src/test/: appFixtures.ts
scripts/: docs.py
