[project]
name = "youtube-downloader-backend"
version = "0.1.0"
description = "Local FastAPI backend for a YouTube downloader UI."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "yt-dlp[default,curl-cffi]>=2026.3.17",
  "yt-dlp-getpot-wpc>=1.0.0",
  "imageio-ffmpeg>=0.5.1",
  "pydantic-settings>=2.6.0",
  "sqlmodel>=0.0.22",
  "python-multipart>=0.0.12",
  "websockets>=15.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
